Thu May 19 11:37:36 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (rb_reg_match_m_p): should return false if no match, as the
	  document says.  [Feature #8110]

Thu May 19 00:17:01 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (reg_names_iter): specify capacify

Wed May 18 21:29:59 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* thread.c (recursive_list_access): a object id may be a Bignum.  so,
	  the list must be a objhash, instead of a identhash.
	  this fixes many test errors on mswin64 CI.

Wed May 18 19:33:54 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_match_m_p): Introduce Regexp#match?, which returns
	  bool and doesn't save backref.

Wed May 18 16:52:03 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_pkcs12.c (ossl_pkcs12_initialize): pop errors
	  leaked by PKCS12_parse(). This is a bug in OpenSSL, which exists
	  in the versions before the version 1.0.0t, 1.0.1p, 1.0.2d.

Wed May 18 16:04:54 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/downloader.rb (Downloader::RubyGems.download): verify gems
	  only if RubyGems is 2.4 or later.  old RubyGems fails to verify
	  almost all of bundled gems.

Wed May 18 14:52:38 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_modify_expand): check integer overflow.
	  [ruby-core:75592] [Bug #12390]

Wed May 18 13:11:44 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (match_ary_subseq): get subseq of match array without creating
	  temporary array.

	* re.c (match_ary_aref): get element(s) of match array without creating
	  temporary array.

	* re.c (match_aref): Use match_ary_subseq with handling irregulars.

	* re.c (match_values_at): Use match_ary_aref.

Wed May 18 13:03:07 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_x509cert.c (ossl_x509_verify): X509_verify()
	  family may put errors on 0 return (0 means verification failure).
	  Clear OpenSSL error queue before return to Ruby. Since the queue is