@@ -3227,6 +3227,7 @@ rb_reg_match_m_p(int argc, VALUE *argv, VALUE re)
     regex_t *reg;
     onig_errmsg_buffer err = "";
     OnigPosition result;
+    const UChar *start, *end;
     int tmpreg;
 
     rb_scan_args(argc, argv, "11", &str, &initpos);
@@ -3234,27 +3235,23 @@ rb_reg_match_m_p(int argc, VALUE *argv, VALUE re)
     str = SYMBOL_P(str) ? rb_sym2str(str) : rb_str_to_str(str);
     if (argc == 2) {
 	pos = NUM2LONG(initpos);
-	if (pos == 0) goto run;
 	if (pos < 0) {
 	    pos += NUM2LONG(rb_str_length(str));
-	    if (pos == 0) goto run;
 	    if (pos < 0) return Qfalse;
-
 	}
-	pos = rb_str_offset(str, pos);
-    }
-run:
-    if (pos >= RSTRING_LEN(str)) {
-	return Qfalse;
+	if (pos > 0) {
+	    long len = 0;
+	    char *beg = rb_str_subpos(str, pos, &len);
+	    if (!beg) return Qfalse;
+	    pos = beg - RSTRING_PTR(str);
+	}
     }
     reg = rb_reg_prepare_re0(re, str, err);
     tmpreg = reg != RREGEXP_PTR(re);
     if (!tmpreg) RREGEXP(re)->usecnt++;
-    result = onig_search(reg,
-			 ((UChar*)RSTRING_PTR(str)),
-			 ((UChar*)RSTRING_END(str)),
-			 ((UChar*)(RSTRING_PTR(str)) + pos),
-			 ((UChar*)RSTRING_PTR(str)),
+    start = ((UChar*)RSTRING_PTR(str));
+    end = start + RSTRING_LEN(str);
+    result = onig_search(reg, start, end, start + pos, end,
 			 NULL, ONIG_OPTION_NONE);
     if (!tmpreg) RREGEXP(re)->usecnt--;
     if (tmpreg) {
